src/objects/Solicitud_Capex__c.object
<CustomObject>
    <fields>
        <fullName>Aditional_information__c</fullName>
        <label>Informacion adicional</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_Position__c</fullName>
        <label>posicion solicitante</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <label>Fecha solicitud</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attach_Business_case__c</fullName>
        <label>Adjunta Business case</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Big_Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Big Deal</label>
        <referenceTo>Big_deals_Survey__c</referenceTo>
        <relationshipLabel>Solicitud Capex</relationshipLabel>
        <relationshipName>Solicitud_Capex</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capex_Import_for_this_year__c</fullName>
        <label>Importe de capex para año en curso</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_Investor_commited__c</fullName>
        <label>Capex Inversor comprometido</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capex_Investor_current_year__c</fullName>
        <label>Capex inversor año en curso</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Nombre del Cliente</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Not_Approved__c</fullName>
        <label>Descripcion no aprobado</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FCV__c</fullName>
        <label>FCV</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fecha_de_Licitacion__c</fullName>
        <label>Fecha de Licitacion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Multiyear_Disposition__c</fullName>
        <label>Disposicion multianual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NAV__c</fullName>
        <label>NAV</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OIBDA__c</fullName>
        <label>OIBDA</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Operator_or_country__c</fullName>
        <description>Ejemplo: Telefonica Peru</description>
        <label>Operadora o Pais</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optional_emails__c</fullName>
        <label>Emails Opcionales</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proyect_Name__c</fullName>
        <label>Nombre Proyecto</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proyect_description__c</fullName>
        <label>Descripcion Proyecto</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Capex__c</fullName>
        <label>Capex Solicitado</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reviewed_by_management_control__c</fullName>
        <label>Revisado por Controlador de Gestion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_code__c</fullName>
        <label>Codigo en Salesforce</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitation_Concept__c</fullName>
        <label>Concepto solicitud</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TIR__c</fullName>
        <label>TIR</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Capex__c</fullName>
        <label>Capex total</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>applicant_name__c</fullName>
        <label>nombre solicitante</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>approved_by_management_control__c</fullName>
        <label>Aprobado por control de gestion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Solicitud Capex</label>
    <nameField>
        <label>Solicitud Capex</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solicitud Capex</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>